# tableland-py

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
tableland/: __main__.py
test/: test_tableland.py
